# PyWand

./: .gitignore  Cargo.toml  LICENSE  README.md  activate.sh  download_uv.sh  install.sh  system_check.sh  todo
.github/: release-drafter-config.yml
.github/workflows/: build.yml  release-drafter.yml  release.yml  version-bump.yml
resources/uv/: README.md
src/: i18n.rs  main.rs  uv_tools.rs
test-suite/: config.yaml  requirements.txt  sample_script.py  utils.py
