[package]
name = "pywand"
version = "0.1.0"
edition = "2021"
authors = ["PyWand Development Team"]
description = "A tool for analyzing Python dependencies and setting up Python environments"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
walkdir = "2.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
flate2 = "1.0"
tempfile = "3.8"
tar = "0.4"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
path-clean = "1.0"
tokio = { version = "1.32", features = ["full"] }
include_dir = "0.7"
rand = "0.8"
dirs = "5.0"
lazy_static = "1.4"
